--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -56,7 +56,37 @@ The University of Chicago}
 
 \noindent Neither ABC nor CARE considered race as an eligibility factor. However, $98\%$ and $90\%$ of their participants, respectively, were African-American. Mean maternal age in ABC (CARE) when the target child was born was 19.9 (21) years, and approximately half of the mothers of both the treatment and control groups were 19 or younger.\footnote{Maternal age at target child’s birth ranges from 13 to 43 years of age. One-third were 17 or younger.} Mean maternal IQ for both treatment and control groups was approximately 85 (87 in CARE), one standard deviation below the national mean. Only $25\%$ of the ABC children lived with both biological parents, and more than $50\%$ lived with extended families in multi-generational households ($61\%$ of treated children and $56\%$ of control children).\\
 
-\noindent To better understand the socio-economic status of the ABC participant families, we construct two comparison groups using the Panel Study of Income Dynamics (PSID), a nationally representative cohort of the children born in the same years as the ABC and CARE children (1973-1979) and a similar cohort restricted to black children. Compared to both nationally representative groups, ABC children were, on average, significantly more disadvantaged; they were born to younger, less educated mothers, most of whom were raising their children without the support of a father, and the total parental labor income was extremely low due to the father not being at home and the low human capital of mothers. The participants of CARE were also disadvantaged compared to nationally representative groups with respect to basic household socio-demographic characteristics.
+\begin{figure}[H]
+\caption{Family Environment Baseline Characteristics, ABC and CARE}  \label{figure:baselineabccare}
+    \centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \subcaption{Average Maternal Age}
+  \includegraphics[height=2.3in]{output/abccarepsid_m_age0pool.eps}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \subcaption{Average Maternal Education} 
+  \includegraphics[height=2.3in]{output/abccarepsid_m_edu0pool.eps}
+\end{subfigure}
+
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \subcaption{Proportion of Households with Father at Home}
+  \includegraphics[height=2.3in]{output/abccarepsid_f_home0pool.eps}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \subcaption{Parental Income in 1,000 of 2014 USD}
+  \includegraphics[height=2.3in]{output/abccarepsid_p_inc0pool.eps}
+\end{subfigure}
+\floatfoot{
+\footnotesize
+\noindent  Note: These panels plot four variable characteristics---mother's age, mother's education, an indicator of father at home, and parental income (in thousands of 2014 USD). In each panel, the first bar shows the national-level mean for a cohort born in the same years as the ABC and CARE individuals (1973-1979), obtained from the Panel Study of Income Dynamics (PSID). The second bar uses this same information but restricted to black individuals. The third and fourth bars plot the same variables for ABC and CARE, pooling the treatment and control groups. We display the sample size for each calculation in parentheses next to the horizontal axis labels.
+}
+\end{figure}
+
+\noindent To better understand the socio-economic status of the ABC participant families, we construct two comparison groups using the Panel Study of Income Dynamics (PSID), a nationally representative cohort of the children born in the same years as the ABC and CARE children (1973-1979), and a similar cohort restricted to black children. We show a comparison in Figure~\ref{figure:baselineabccare}. Compared to both nationally representative groups, ABC children were, on average, significantly more disadvantaged; they were born to younger, less educated mothers, most of whom were raising their children without the support of a father, and the total parental labor income was extremely low due to the father not being at home and the low human capital of mothers. The participants of CARE were also disadvantaged compared to nationally representative groups with respect to basic household socio-demographic characteristics.
 
 \subsection{Randomization Protocol and Compromises}
 
