adding control contamination

--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -44,7 +44,7 @@ The University of Chicago}
 
 \noindent In both studies, the sample sizes were small: ABC recruited 122 children over four cohorts, while CARE recruited 65 children over two cohorts. ABC had two phases. The first phase began at birth and ended up at age 5. It randomly assigned children into either treatment or control. The treatment group received: (i) center-based childcare; (ii) breakfast, lunch, an afternoon snack, iron-fortified formula for the first 15 months of life, and a monthly supply of diapers; and (iii) medical care from licenses nurses supervises by a pediatrician, frequent health check-ups, and hospital referrals in case of need of serious medical treatment.The control group only received the formula and the diapers. The second phase began at age 5 and ended up at age 8. It randomly assigned the 95 children who remained in the program at age 5 into treatment or control, independently of their status in the second randomization. The treatment consisted of home visits targeting both children and parents.\\ 
 
-\noindent The design and implementation of CARE was closely related to the first phase of ABC. An additional objective of CARE was to study the importance of improving the home environment on child development. Therefore, CARE extended the design of ABC to include a family education program. The program had a single phase, from birth up to age 5. Children were randomly assigned to either of three experimental groups: (i) control---23 children; (ii) family education---25 children; and (iii) family education and center-based childcare---17 children. The first group received no treatment at all. The second group received home visits that helped the parents to solve everyday problems that could interfere with the way in which they interacted with their children.\\
+\noindent The design and implementation in CARE and ABC were very close. CARE also had two stages, although children were randomized a single time and received the two treatment phases as a bundle. While the second stage was practically identical in the two programs, the first phase of CARE took a main departure from the first phase of ABC. The main objective from the departure  was to study the importance of improving the home environment on child development. CARE extended the design of ABC to include a family education program. The first phase of CARE was from birth up to up to age 5. Children were randomly assigned to either of three experimental groups: (i) control---23 children; (ii) family education---25 children; and (iii) family education and center-based childcare---17 children. As in ABC, the control group received diapers and complementary nutrition from birth to 15 months old. The second group received home visits that helped the parents to solve everyday problems that could interfere with the way in which they interacted with their children. Both treatment groups received the second phase of treatment from ages 5 to 8, just as the treatment group children in ABC.\\
 
 \noindent Data availability is vast and very similar in both programs. In the first 8 years of life, yearly data on cognitive and socio-emotional skills, home environment, and family structure and economic conditions were collected. After age 8, the collection of data was scattered. Information on cognitive and socio-emotional skills, educaton, and family economic conditions was collected at ages 12, 15, 21, and 30.\footnote{At age 30, information on cognitive skills is unavailable both in ABC and CARE.} In addition, we have two elements that are unique in the literature: administrative criminal records and a full medical sweep at age 34. These rich sources of data allow us to study the long-term effects on several aspects of human development.
 
@@ -110,7 +110,7 @@ The University of Chicago}
 \floatfoot{
 \tiny
 \noindent
-Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_Campbell_1984_AJMD}, internal documents of the program, and our own calculations using the data. Note: The variable R represents randomization into treatment [R=1] or control [R=0] groups. After the original randomization, some children died or withdrew the program early in life and were replaced. R also includes those replacements. Arrows pointing outside the diagram indicate children that left the study permanently. The variable P represents participation in the preschool-age program [P=1] or not participation on it [P=0]. The variable SR represents randomization into the school-age program [SR=1], or out of it [SR=0]. Some children were not randomized at school age [SR=No]. We use the term temporary attrited for children that did not participate in the study at school age, but were later interviewed in the age-21 followup.
+Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_Campbell_1984_AJMD}, internal documents of the program, and own calculations. Note: The variable R represents randomization into treatment [R=1] or control [R=0] groups. After the original randomization, some children died or withdrew the program early in life and were replaced. R also includes those replacements. Arrows pointing outside the diagram indicate children that left the study permanently. The variable P represents participation in the preschool-age program [P=1] or not participation on it [P=0]. The variable SR represents randomization into the school-age program [SR=1], or out of it [SR=0]. Some children were not randomized at school age [SR=No]. We use the term temporary attrited for children that did not participate in the study at school age, but were later interviewed in the age-21 followup.
 }
 	\end{figure}
 \end{center}
@@ -121,12 +121,25 @@ Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1
 
 \subsubsection{CARE}
 
-\noindent The randomization protocol in CARE was analogous to the first-phase randomization protocol in ABC. Importantly, it had no major compromises. Of the initial 65 families, 23 were randomized to control, 25 to family education treatment, and 17 to family education treatment and center-based childcare treatment. Two families in the family education treatment group had twins. As in ABC, the twin children were jointly randomized. After randomization, the family of one child initially assigned to the family education and center-based childcare treatment refused its status and did not participate of the program. Within the first six months of treatment, a child assigned to this same group left the study due to family reallocation. Finally, one child who was assigned to the family education treatment group died.\\
+\noindent The randomization protocol in CARE was analogous to the first-phase randomization protocol in ABC. Importantly, it had no major compromises. Of the initial 65 families, 23 were randomized to control, 25 to family education treatment, and 17 to family education and center-based childcare treatment. Two families in the family education treatment group had twins. As in ABC, the twin children were jointly randomized. After randomization, the family of one child initially assigned to the family education and center-based childcare treatment refused its status and did not participate of the program. Within the first six months of treatment, a child assigned to this same group left the study due to family reallocation. Finally, one child who was assigned to the family education treatment group died. Figure~\ref{fig:care-flow} illustrates the CARE's randomization and the flow of participants throughout the data follow-ups.\\
 
+\begin{center}
+	\begin{figure}[H]
+		\caption{Follow-up Availability and Attrition, CARE} \label{fig:care-flow}
+		\label{fig:cc}
+		\centering
+		\includegraphics[width=.9\columnwidth]{output/Diagram_CARE.pdf}
+\floatfoot{
+\footnotesize
 \noindent 
+Sources: \cite{Wasik_Ramey_etal_1990_CD}, internal documents of the program, and own calculations. Note: The variable R represents randomization into control [R=0], family education treatment [R=1], and family education and center-based childcare treatment [R=2]. Arrows pointing outside the diagram indicate children that left the study permanently. The variable P represents participation in the respective programs. Both the treatment groups continued into school-age with a home visitation program that was not randomized. We use the term temporary attrited for children who did not participate in the study at school age, but were later interviewed in the age-21 followup.}
+	\end{figure}
+\end{center}
 
 
 \subsection{Treatment Substitution}
+
+
 
 \subsection{Program Description and Content}
 
