--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -48,7 +48,7 @@ The University of Chicago}
 
 \noindent Data availability is vast and very similar in both programs. In the first 8 years of life, yearly data on cognitive and socio-emotional skills, home environment, and family structure and economic conditions were collected. After age 8, the collection of data was scattered. Information on cognitive and socio-emotional skills, educaton, and family economic conditions was collected at ages 12, 15, 21, and 30.\footnote{At age 30, information on cognitive skills is unavailable both in ABC and CARE.} In addition, we have two elements that are unique in the literature: administrative criminal records and a full medical sweep at age 34. These rich sources of data allow us to study the long-term effects on several aspects of human development.
 
-\subsection{Eligibility Criteria and Populations Served}
+\subsection{Eligibility Criteria and Populations Served} \label{section:eligibility}
 
 \noindent ABC recruited four cohorts of children, who were born in the years 1973 to 1977. CARE recruited two cohorts of children, who were born in 1978 and 1979. The recruitment process was identical. Potential families were referred by local social service agencies and hospitals at the beginning of the mothers' last trimester of pregnancy. Eligibility for inclusion was determined by a score of 11 or more on a weighted 13-factor High-Risk Index.\footnote{The HRI was based on 13 weighted variables. (i) maternal educational levels —years of education followed by weight in parentheses: ≤6 (8); 7 (7); 8 (6); 9 (3); 10 (2) 11 (1); ≥12 (0)— (ii); paternal educational levels —weights identical to scheme for mother’s education; (iii) family income —income bracket in current dollars followed by weight in parentheses: ≤1,000 (8); 1,001-2000 (7); 2,001-3,000 (6); 3,001-4,000 (5); 4,001-5,000 (4); ≥ 5,001 (0); (iv) father’s absence in the household for reasons other than health or death (weight = 3); (v) absence of maternal relatives in the area (weight = 3); (vi) siblings of school age one or more grades behind age- appropriate level, or with equivalently low scores on school-administered achievement tests (weight = 3); (vii) payments received from welfare agencies within past 3 years (weight = 3); (viii) record of father’s work indicates unstable or unskilled and semi-skilled labor (weight = 3); (ix) record of mother’s or father’s IQ indicate scores of 90 or below (weight = 3); (x) records of sibling’s IQ indicates scores of 90 or below (weight = 3); (xi) relevant social agencies in the community indicate the family is in need of assistance; (xii) one or more members of the family has sought counseling or professional help in the past 3 years (weight = 1); and (xiii) special circumstances not included in any of the above that are likely contributors to cultural or social disadvantage (weight = 1).} Table~\ref{table:} compares the ABC and CARE children with respect to the most representative elements in the HRI. The children in CARE were relatively less disadvantaged: their mothers were significantly more educated and worked more before pregnancy; their parents had more income total income.\\
 
@@ -106,7 +106,7 @@ The University of Chicago}
 	\begin{figure}[H]
 		\caption{Randomization Protocol and Treatment Compliance, ABC} \label{fig:abc-flow}
 		\centering
-		\includegraphics[width=.9\columnwidth]{output/Diagram_ABC.pdf}
+		\includegraphics[width=.9\columnwidth]{output/abc_Diagram.pdf}
 \floatfoot{
 \tiny
 \noindent
@@ -126,9 +126,8 @@ Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1
 \begin{center}
 	\begin{figure}[H]
 		\caption{Follow-up Availability and Attrition, CARE} \label{fig:care-flow}
-		\label{fig:cc}
 		\centering
-		\includegraphics[width=.9\columnwidth]{output/Diagram_CARE.pdf}
+		\includegraphics[width=.9\columnwidth]{output/care_Diagram.pdf}
 \floatfoot{
 \footnotesize
 \noindent 
@@ -139,9 +138,53 @@ Sources: \cite{Wasik_Ramey_etal_1990_CD}, internal documents of the program, and
 
 \subsection{Treatment Substitution}
 
+\noindent In both programs, many children who did not have access to center-based childcare by random assignment were enrolled by their parents into alternative preschools. Clarifying this is fundamental: it changes the meaning of simple comparisons between children in the control and the treatment groups, and poses a methodological challenge when answering policy-relevant questions. We document take-up of alternative preschool here and propose a methodology to answer relevant policy-questions in Section~\ref{section:methodology}.\\
+
+\begin{figure}[H]
+		\caption{Treatment Substitution, ABC} \label{fig:treatsubabc}
+		\includegraphics[width=.9\columnwidth]{output/abc_controlcontamination_months.eps}
+\floatfoot{
+\footnotesize
+\noindent Note: This figure displays the cumulative density function of enrollment in alternative preschool for the control group in ABC.}
+\end{figure}
+
+\noindent In ABC, $70\%$ of children enrolled in either of 11 local center-based childcare centers (see Figure~\ref{fig:treatsubabc}). All of these centers received federal subsidies and thereby were regulated by the Federal Interagency of Daycare Requirements. Their staff was required to be trained in early childhood education and the centers were required to implement curricula designed to enhan ce cognitive, social, and linguistic competence in disadvantaged children \footnote{}. In CARE, two of the experimental groups did not receive center-based childcare as part of treatment by design, the control and the family education treatment groups. Little more than $70\%$ from the  former and $60\%$ from the latter were enrolled in alternative preschool by their parents, to the same set of local center-based childcare centers as the ABC children in the control group (see Figure~\ref{fig:treatsubcare}).\\
+
+\begin{figure}[H]
+		\caption{Treatment Substitution, CARE} \label{fig:treatsubcare}
+		\includegraphics[width=.9\columnwidth]{output/care_controlcontamination_months.eps}
+\floatfoot{
+\footnotesize
+\noindent Note: This figure displays the cumulative density function of enrollment in alternative preschool for the control and family education treatment groups in CARE.}
+\end{figure}
+ 
 
 
 \subsection{Program Description and Content}
+
+\noindent In the following lines, we describe ABC and CARE comparatively. Table~\ref{tab:programcomparison} summarizes how the programs compare.\\
+
+\input{output/abccare_programcomparison.tex}
+
+\noindent ABC and CARE shared a main, initial objective: to prevent mental retardation by enhancing development from birth and foster school readiness for disadvantaged children.\footnote{•} The different curricula implemented at center-based childcare across programs and cohorts has the following common goals: (i) support language, mother, and cognitive development; (ii) develop socio-emotional competencies that were considered to enable school readiness---e.g. task orientation, emotional self-expression, independence, sharing, and cooperation. The curricula evolved each year, based on studies done by the programs' staff on children's data.\footnote{A brief comparison to other early childhood education curricula is the following. The curricula implemented in the first phases of ABC and CARE and Tools of Mind share emphasis on self regulation---e.g., goal setting and self-reflection--- and opportunities for language development. Language development, including phonics and reading skills, is also an important element in other widely implemented curricula sun as Opening the World of Learning.}${^{\text{,}}}$\footnote{Two other renowned early childhood education programs are worth comparing to ABC and CARE. The Infant Health and Development Project (IHDP) was based on the first phase of CARE. IHDP had a single treatment group, which was very similar to the center-based childcare and family education treatment group of CARE. The curricula implemented both and home and at center-based childcare were very similar. The main difference is that the first phase of CARE lasted 5 years, while IHDP lasted 3 years and it had not second phase. Both ABC and CARE were notably different from the Nurse Family Partnership (NFP) program. NFP had fewer visits and it began in the pre-natal period. Mothers received monthly visits during pregnancy and one visit every two months once the child was born and up to age 2. The visitors were nurses and they tried to help women to build relationships with friends and family, to create a support network for their children. A common element of the three programs is that the visitors helped parents to use community resources when solving their everyday problems.}\\
+
+\noindent Both treatment groups in CARE had home visits. The main objective of this component was to help identify and think of solutions to parents' everyday problems that could adversely affect the relationship they had with their children. It was meant to improve the skills necessary for parents to raise their children. Usually, the home visits were weekly and one hour long. From birth and up to age 3, the participants of the family education and center-based childcare and family education groups received, on average, 2.5 and 2.7  visits a month. At ages 4 and 5, the average frequency diminished to 1.4 and 1.1 visits per month, respectively.\\ 
+
+\noindent The first phases of ABC and CARE were conducted in conjunction with a longitudinal medical research study on infectious respiratory diseases in group environments. This allowed the children to have comprehensive medical care in the same center in which they received center-based childcare. The children who attended the center received daily screenings to detect sign of illness. This included all the children in the treatment group of ABC and all the children in the center-based childcare and family education group of CARE. The first cohort of the control group of ABC also received frequent medical check-ups during the first year of the first-phase of the program.\\
+
+\noindent The children assigned to treatment in the first phase of ABC also received primary pediatric care by a family nurse practitioner and a licenses practical nurse, who were supervised by a pediatrician who was on continuous duty at the center-based childcare center. This care consisted of wellness check-ups, immunizations, parental counseling, and initial assessments of illnesses. As the rest of the treatment, pediatric care was free of charge. It included immunizations and basic medicines; any further prescriptions were not covered. Unfortunately, no documentation or correspondence evidences whether this part of the treatment was available for either of the treatment groups of CARE.\\
+
+\noindent All participants center-based childcare in both programs were provided breakfast, lunch, and an afternoon snack. This were planned by a nutritionist. Children in the control groups of both programs received diapers from birth and up to when they were 3 years old, and an unlimited supply of bottled formula from birth and up to 15 months old.\footnote{None of the control groups of  ABC or CARE or the family education treatment group of CARE received any medical care. As explained above, an exception was the first cohort of the control children in ABC.}\\
+
+\noindent The children in ABC where subject to a second randomization protocol, and where assigned to either treatment or control independently of their status in the first-phase. The children in CARE were not subject to a second randomization protocol. Instead, both the family education and the center-based childcare and family education treatment groups were given second-phase treatment. The control group of the first phase kept being the control group of the second stage. The second-phase or school-age treatment lasted for the first three year of elementary school and consisted of home visits by a teacher. The objective of the visits was to increase exposure to reading and mathematics and to promote parental involvement in the learning process. The visits happened every two weeks in the presence of the parents. The teachers discussed the children's programs with the parents. In addition, they helped parents with issues related to literacy, housing, and medical care.\\ 
+
+\subsection{Data}
+
+\noindent The data collection processes in ABC and CARE were analogous by design. The treatment and control groups were followed into adulthood with relatively low attrition. For ABC, children were followed-up annually through elementary school and and at ages 12, 15, 21, and 30. Health and administrative crime data were collected when the children reached their mid-30s. For CARE, the exact same follow-ups are available except for the 15 years-old one.\\
+
+\noindent Information on the children’s developmental progress, schooling, home environment, and diverse characteristics on the parents was recorded through early childcare and elementary school, and at age 21. The data include measures of each child’s IQ, achievement test scores, health, risky behaviors, schooling, social interactions, socio-emotional status, and non-cognitive skills; family and household variables; and parents’ labor market participation, income, IQ, schooling, and attitudes toward child-rearing. For ages 21 and 30, information on labor market outcomes, income, educational attainment, relationship histories, health status, household status, risky behaviors, and criminal activity is available.\\
+
+\noindent For ABC, information is available on 100 children in the age 30 follow-up, which we call the adult follow-up. In addition, 88 participants (45 and 43 from the control and treatment groups respectively) consented to release their criminal records and information on a full-range biomedical sweep is available (for 31 and 39 participants of the control and treatment groups, respectively). Examples of the information in the health data include prevalence of diabetes and high blood pressure, waist-to-hip ratio, height and weight, and cholesterol levels. For CARE, the data is similarly available (see Figure~\ref{fig:care-flow}). In Appendix~\ref{appendix:data} we find no differences on observed characteristics between the individuals for whom we have crime and health data for both programs.
 
 \section{Methodology} \label{section:methodology}
 
