--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -8,7 +8,7 @@
 & \multicolumn{1}{c}{ABC}& \multicolumn{1}{c}{CARE}\\
 \hline 
 Program Overview &&\\
-\hspace{.5cm} Implemented Years &1972--1982&1978--1985\\
+\hspace{.5cm} Years Implemented &1972--1982&1978--1985\\
 \hspace{.5cm} Age of Entry/Exit & birth to 5 years old &\checkmark\\
 \hspace{.5cm} Initial Sample &122&64\\
 \hspace{.5cm} \# of Cohorts &4&2\\
@@ -17,36 +17,36 @@ Eligibility & socio-economic disadvantage according to a multi-factor index (see
  \midrule
 Control &&\\
 \hspace{.5cm} N &54&23\\
-\hspace{.5cm} Compensation & diapers from birth to 3 years old. Unlimited formula from birth to 15 months old & \checkmark \\
+\hspace{.5cm} Compensation & Diapers from birth to age 3, unlimited formula from birth to 15 months & \checkmark \\
 \hspace{.5cm} Treatment Substitution & 70\% & $\sim$ 70\%\\
 \midrule
-Treatment & center-based childcare & center-based childcare and family education\\
+Treatment & Center-based childcare & Center-based childcare and family education\\
 \hspace{.5cm} \textbf{Center-base} &&\\
 \hspace{.5cm} \textbf{Childcare} &&\\
 \hspace{.5cm} N &57&17\\
 \hspace{.5cm} Intensity &6.5--9.75 hours a day for 50 weeks per year&\checkmark\\
-\hspace{.5cm} Components & instruction, medical care, nutrition, social services &\checkmark\\
-\hspace{.5cm} Staff-to-child Ratio &1:3 during age 0--1 &\checkmark\\
-&1:4--5 during age 1--4 &\checkmark\\&1:5--6 during age 4--5 &\checkmark\\
-\hspace{.5cm} Staff Qualifications &mixed diplomas; experienced&\checkmark\\
-\hspace{.5cm} \textbf{Family Education} & not part of the program &24\\
-\hspace{.5cm} Intensity && hour-long home visits. 2--3 per month during age 0--3. 1--2 per month during age 4--5\\
-\hspace{.5cm} Curriculum & & social and mental stimulation; parent-child interaction\\
+\hspace{.5cm} Components & Instruction, medical care, nutrition, social services &\checkmark\\
+\hspace{.5cm} Staff-to-child Ratio &1:3 during ages 0--1 &\checkmark\\
+&1:4--5 during age 1--4 &\checkmark\\&1:5--6 during ages 4--5 &\checkmark\\
+\hspace{.5cm} Staff Qualifications &Mixed diplomas; experienced&\checkmark\\
+\hspace{.5cm} \textbf{Family Education} & Not part of the program &24\\
+\hspace{.5cm} Intensity && One hour-long home visits. 2--3 per month during ages 0--3. 1--2 per month during ages 4--5\\
+\hspace{.5cm} Curriculum & & Social and mental stimulation; parent-child interaction\\
 \hspace{.5cm} Staff-to-child Ratio &&1:1\\
-\hspace{.5cm} Staff Qualifications &&home visitor training\\
+\hspace{.5cm} Staff Qualifications &&Home visitor training\\
 \midrule
  School-age Treatment \\
  \hspace{.5cm} N&46&39\\
-\hspace{.5cm} Intensity &every other week& \checkmark\\
-\hspace{.5cm} Components &parent-teacher meetings& \checkmark\\
-\hspace{.5cm} Curriculum & reading and math &\checkmark\\
+\hspace{.5cm} Intensity &Every other week& \checkmark\\
+\hspace{.5cm} Components &Parent-teacher meetings& \checkmark\\
+\hspace{.5cm} Curriculum & Reading and math &\checkmark\\
 \hspace{.5cm} Staff-to-child Ratio &1:1&\checkmark\\
-\hspace{.5cm} Staff Qualifications &graduate degree and training in special education & \checkmark\\
+\hspace{.5cm} Staff Qualifications &Graduate degree and training in special education & \checkmark\\
 \midrule
 Data Availability \\
-Questionnaires & age 0--5, 8, 12, 15, 21, 30--34 & age 0--5, 8, 12, 21, 30--34 \\
-Parent Interview & age 0--5, 8, 12, 15, 21& age 0--5, 9, 12 \\  
-Health follow-up & age 30--34&\checkmark\\
+Questionnaires & Ages 0--5, 8, 12, 15, 21, 30--34 & Ages 0--5, 8, 12, 21, 30--34 \\
+Parent Interview & Ages 0--5, 8, 12, 15, 21& Ages 0--5, 9, 12 \\  
+Health Follow-up & Ages 30--34&\checkmark\\
 \hline \hline
 \end{tabular}}
 \footnotesize
