--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -44,17 +44,17 @@ The University of Chicago}
 
 \noindent In both studies, the sample sizes were small: ABC recruited 122 children over four cohorts,\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject}} while CARE recruited 65 children over two cohorts. ABC had two phases, the first of which lasted from birth until the age of 5. Children were randomly assigned to either treatment or control. The treatment group received: (i) center-based childcare; (ii) breakfast, lunch, an afternoon snack, iron-fortified formula for the first 15 months of life, and a monthly supply of diapers; and (iii) medical care from licensed nurses who were supervised by a pediatrician, frequent health check-ups, and hospital referrals when serious medical treatment was needed.The control group only received formula and diapers. At the age of 5, the 95 remaining children were randomly assigned to treatment or control, independent of their status in the prior randomization, for the second phase of treatment which lasted until the age of 8. The treatment consisted of home visits targeting both children and parents.\\ 
 
-\noindent The design and implementation of CARE and ABC were very similar. CARE also had two stages, but children were only randomized once and received the two treatment phases as a bundle. While the second stage was practically identical in the two programs, the first phase of CARE differed significantly from the first phase of ABC by including a family education program. The main objective of this component  was to study the importance of improving the home environment on child development.\footnote{\citet{Wasik_Ramey_etal_1990_CD}} The first phase of CARE lasted from birth until the age 5. Children were randomly assigned to one of three experimental groups: (i) control---23 children; (ii) family education---25 children; and (iii) family education and center-based childcare---17 children. As in ABC, the control group received diapers and complementary nutrition from birth to 15 months. The second group received home visits that helped the parents solve everyday problems that could have interfere with the way in which they interacted with their children. Both treatment groups received the second phase of treatment from ages 5 to 8.\\
+\noindent The design and implementation of CARE and ABC were very similar. CARE also had two stages, but children were only randomized once and received the two treatment phases as a bundle. While the second stage was practically identical in the two programs, the first phase of CARE differed significantly from the first phase of ABC by including a family education program. The main objective of this component  was to study the importance of improving the home environment on child development.\footnote{\citet{Wasik_Ramey_etal_1990_CD}} The first phase of CARE lasted from birth until the age of 5. Children were randomly assigned to one of three experimental groups: (i) control---23 children; (ii) family education---25 children; and (iii) family education and center-based childcare---17 children. As in ABC, the control group received diapers and complementary nutrition from birth to 15 months. The second group received home visits that helped the parents solve everyday problems that could have interfered with the way in which they interacted with their children. Both treatment groups received the second phase of treatment from ages 5 to 8.\\
 
 \noindent The data available on both programs is rich and very similar. From birth until the age of 8, data was collected annually on cognitive and socio-emotional skills, home environment, and family structure and economic conditions. After age 8, the collection of data was less regular. Information on cognitive and socio-emotional skills, educaton, and family economic conditions was collected at ages 12, 15, 21, and 30.\footnote{At age 30, information on cognitive skills is unavailable for both ABC and CARE.} In addition, we have two sources of data that are unique in the program-evaluation literature: administrative criminal records and a full medical sweep at age 34. These rich sources of data allow us to study the long-term effects of the programs on numerous aspects of human development.
 
 \subsection{Eligibility Criteria and Populations Served} \label{section:eligibility}
 
-\noindent ABC recruited four cohorts of children born between 1973 and 1977.\footnote{\citet{Feagans_1996_Childrens-Talk}} CARE recruited two cohorts of children, one  born in 1978 and one in 1979. The recruitment processes were identical. Potential families were referred by local social service agencies and hospitals at the beginning of the mother's last trimester of pregnancy. Eligibility was determined by a score of 11 or more on a weighted 13-factor High-Risk Index.\footnote{The HRI is based on 13 weighted variables, which are listed here with weights in parentheses: (i) maternal educational level measured by years of education - ≤6 (8), 7 (7), 8 (6), 9 (3), 10 (2), 11 (1), ≥12 (0); (ii) paternal educational levels with weights identical to those for maternal education; (iii) family income measured in current dollars - ≤1,000 (8), 1,001-2000 (7), 2,001-3,000 (6), 3,001-4,000 (5), 4,001-5,000 (4), ≥ 5,001 (0); (iv) father’s absence from the household for reasons other than health or death (3); (v) absence of maternal relatives in the area (3); (vi) siblings of school age one or more grades behind age-appropriate level, or with equivalently low scores on school-administered achievement tests (3); (vii) received payments from welfare agencies within past 3 years (3); (viii) record of father’s work indicates instability or unskilled and semi-skilled labor (3); (ix) record of maternal or paternal IQ score of 90 or below (3); (x) record of sibling IQ score of 90 or below (3); (xi) relevant social agencies in the community indicate the family is in need of assistance (MISSING WEIGHT); (xii) one or more family members has sought counseling or professional help in the past 3 years (1); and (xiii) special circumstances not included in any of the above that are likely contributors to cultural or social disadvantage (1).} Table~\ref{table:} compares the ABC and CARE children with respect to the elements of the HRI that are most representative of socio-economic risk. The children in CARE were relatively less disadvantaged: their mothers were significantly more educated and worked more before pregnancy, and their parents had a higher total income.\\
+\noindent ABC recruited four cohorts of children born between 1973 and 1977.\footnote{\citet{Feagans_1996_Childrens-Talk}} CARE recruited two cohorts of children, one  born in 1978 and one in 1979. The recruitment processes were identical. Potential families were referred by local social service agencies and hospitals at the beginning of the mother's last trimester of pregnancy. Eligibility was determined by a score of 11 or more on a weighted 13-factor High-Risk Index.\footnote{The HRI is based on 13 weighted variables, which are listed here with weights in parentheses: (i) maternal education level measured by years of education - ≤6 (8), 7 (7), 8 (6), 9 (3), 10 (2), 11 (1), ≥12 (0); (ii) paternal education level with weights identical to those for maternal education; (iii) family income measured in current dollars - ≤1,000 (8), 1,001-2000 (7), 2,001-3,000 (6), 3,001-4,000 (5), 4,001-5,000 (4), ≥ 5,001 (0); (iv) father’s absence from the household for reasons other than health or death (3); (v) absence of maternal relatives in the area (3); (vi) siblings of school age one or more grades behind age-appropriate level, or with equivalently low scores on school-administered achievement tests (3); (vii) received payments from welfare agencies within past 3 years (3); (viii) record of father's work indicates instability or unskilled and semi-skilled labor (3); (ix) record of maternal or paternal IQ score of 90 or below (3); (x) record of sibling IQ score of 90 or below (3); (xi) relevant social agencies in the community indicate the family is in need of assistance \textbf{(MISSING WEIGHT)}; (xii) one or more family members has sought counseling or professional help in the past 3 years (1); and (xiii) special circumstances not included in any of the above that are likely contributors to cultural or social disadvantage (1).} Table~\ref{table:} compares the ABC and CARE children with respect to the elements of the HRI that are most representative of socio-economic risk. The children in CARE were relatively less disadvantaged: their mothers were significantly more educated and worked more before pregnancy, and their parents had a higher total income.\\
 
 \noindent \textbf{[JLG: ABC vs. CARE Table]}.\\
 
-\noindent Neither ABC nor CARE used race as an eligibility factor. However, $98\%$ and $90\%$ of their participants, respectively, were African-American.\footnote{\citet{Ramey_Smith_1977_AJMD},\citet{Ramey_Campbell_1984_AJMD},\citet{Ramey_Campbell_1991_childreninpoverty},\citet{Campbell_Pungello_etal_2001_DP}} Mean maternal age in ABC (CARE) when the target child was born was 19.9 (21) years, and approximately half of the mothers of both the treatment and control groups were 19 or younger.\footnote{Maternal age at target child’s birth ranges from 13 to 43 years of age. One-third were 17 or younger.} Mean maternal IQ for both treatment and control groups was approximately 85 (87 in CARE), one standard deviation below the national mean. Only $25\%$ of the ABC children lived with both biological parents, and more than $50\%$ lived with extended families in multi-generational households ($61\%$ of treated children and $56\%$ of control children).\footnote{\citet{Ramey_Campbell_1991_childreninpoverty},\citet{Campbell_Ramey_1994_CD}}\\
+\noindent Neither ABC nor CARE used race as an eligibility factor. However, $98\%$ and $90\%$ of their participants, respectively, were African-American.\footnote{\citet{Ramey_Smith_1977_AJMD},\citet{Ramey_Campbell_1984_AJMD},\citet{Ramey_Campbell_1991_childreninpoverty},\citet{Campbell_Pungello_etal_2001_DP}} Mean maternal age in ABC (CARE) when the target child was born was 19.9 (21) years, and approximately half of the mothers of both the treatment and control groups were 19 or younger.\footnote{Maternal age at target child's birth ranges from 13 to 43 years of age. One-third were 17 or younger.} Mean maternal IQ for both treatment and control groups was approximately 85 (87 in CARE), one standard deviation below the national mean. Only $25\%$ of the ABC children lived with both biological parents, and more than $50\%$ lived with extended families in multi-generational households ($61\%$ of treated children and $56\%$ of control children).\footnote{\citet{Ramey_Campbell_1991_childreninpoverty},\citet{Campbell_Ramey_1994_CD}}\\
 
 \begin{figure}[H]
 \caption{Family Environment Baseline Characteristics, ABC and CARE}  \label{figure:baselineabccare}
@@ -94,11 +94,11 @@ The University of Chicago}
 
 \noindent The first-phase randomization was paired at the family level, so pairs of siblings and twins were jointly randomized to either treatment or control.\footnote{Sibling pairs occurred when the two siblings were close enough in age such that both of them were eligible for the program.} Although we know that the pairing was based on HRI, maternal characteristics, number of siblings, and gender, we do not knows the original pairs. In total, 120 families took part in the study. As discussed below, our calculations indicate that 112 families participated in the initial randomization, while 8 families became part of the program as replacement for the families that withdrew.\\
 
-\noindent There were some compromises to first-phase randomization. One control child participated in the program and three children in the treatment group did not participate due to the decisions of their families. We have information on these children and their families from birth until the end of elementary school. Four families moved out of the area before any data on them was collected and only data from adulthood is available. Two children in the control group were swapped into treatment at the request of local authorities, because they were considered to be at high-risk of developmental delay. Two additional children in the control group were dropped because they were diagnosed with developmental delay, which made them ineligible for the program. Most of the data for these last four control children is available from birth until elementary school. Finally, four children died before age 5 \footnote{One child in the control group died at 3 months from cardiomyopathy and seizure disorder, and a second child in the control group died at 18 months from a cardiac arrest. One child in the treatment group died at 3 months from crib death, while the other died in a pedestrian accident at 50 months \citet{Ramey_Campbell_1984_AJMD}} Based on this, we classify 14 children as cases of attrition. Table~\ref{table:} compares their baseline characteristics with the baseline characteristics of the children who complied to the first-phase randomization.\\
+\noindent There were some compromises to first-phase randomization. One control child participated in the program and three children in the treatment group did not participate due to the decisions of their families. We have information on these children and their families from birth until the end of elementary school. Four families moved out of the area before any data on them was collected and only data from adulthood is available. Two children in the control group were swapped into treatment at the request of local authorities, because they were considered to be at high-risk of developmental delay. Two additional children in the control group were dropped because they were diagnosed with a developmental delay, which made them ineligible for the program. Most of the data for these last four control children is available from birth until elementary school. Finally, four children died before age 5.\footnote{One child in the control group died at 3 months from cardiomyopathy and seizure disorder, and a second child in the control group died at 18 months from a cardiac arrest. One child in the treatment group died at 3 months from crib death, while the other died in a pedestrian accident at 50 months \citet{Ramey_Campbell_1984_AJMD}} Thus, we classify 14 children as cases of attrition. Table~\ref{table:} compares their baseline characteristics with the baseline characteristics of the children who complied to the first-phase randomization.\\
 
 \noindent \textbf{[JLG: Compliers vs. Attriters Table]}\\
 
-\noindent The children who stopped participating in the program before they were 6 months old were replaced. \footnote{Three replacements are documented in \citet{•}. One is documented in correspondence with the program officers, which is available from the authors of this document upon request. The rest are implied by the number of children who participated of the randomization in each cohort.} Thus, the final first-phase sample consisted of 111 children (53 treatment children and 58 control children).\\
+\noindent The children who stopped participating in the program before they were 6 months old were replaced.\footnote{Three replacements are documented in \citet{Ramey_Campbell_1979_SR}. One is documented in correspondence with the program officers, which is available from the authors of this document upon request. The rest are implied by the number of children who participated of the randomization in each cohort.} Thus, the final first-phase sample consisted of 111 children (53 treatment children and 58 control children).\\
 
 \noindent Prior to the second-phase randomization, 3 children in the control group of the first phase and 3 children in the treatment group of the first phase stopped being followed. One child in the control group and 8 children in the treatment group of the first phase did not participate in the second phase but later agreed to participate in the data collections during adulthood. This yielded a sample of 96 children, who were randomized to treatment (49) and control (47), independently of their status in the first phase. Three children in the control group did not comply with the randomization protocol by not participating, while all children in the control group adhered to their randomization status. Figure~\ref{fig:abc-flow} illustrates the randomization protocol for the two phases of the program.
 
